Bug 149756 - FILEOPEN PPTX Some connectors are broken
Summary: FILEOPEN PPTX Some connectors are broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:26.8...
Keywords: bibisected, bisected, implementationError
: 154345 (view as bug list)
Depends on:
Blocks: PPTX-line-connector-import
  Show dependency treegraph
 
Reported: 2022-06-28 10:12 UTC by Gabor Kelemen (Collabora)
Modified: 2025-12-10 13:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimized example file from PP 2016 (74.87 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-06-28 10:12 UTC, Gabor Kelemen (Collabora)
Details
First slide in PP and Impress 7.4 (188.72 KB, image/png)
2022-06-28 10:14 UTC, Gabor Kelemen (Collabora)
Details
Second slide in PP and Impress 7.4 (175.50 KB, image/png)
2022-06-28 10:14 UTC, Gabor Kelemen (Collabora)
Details
Third slide in PP and Impress 7.4 (148.75 KB, image/png)
2022-06-28 10:15 UTC, Gabor Kelemen (Collabora)
Details
Even more minimal example file (35.29 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-06-28 10:27 UTC, Gabor Kelemen (Collabora)
Details
The minimal example in PP and Impress, with the two kinds of errors (79.22 KB, image/png)
2022-06-28 10:28 UTC, Gabor Kelemen (Collabora)
Details
I believe this is another example (which I was just going to file separately)? (49.19 KB, application/vnd.ms-powerpoint)
2022-08-04 23:02 UTC, Gerald Pfeifer
Details
Visual comparison for "I believe this is another example" (LO left, PP right) (82.29 KB, image/png)
2022-08-04 23:06 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-06-28 10:12:52 UTC
Created attachment 180995 [details]
Minimized example file from PP 2016

This is split from bug 140038 example file attachment 169332 [details] 

When opened in Impress, some connectors (but not all) have more rectangle breaks, two instead of one, or the length of the section before the break is not the same as in PP.

1, Open attached file, minimized from attachment 169332 [details] 
2, Notice that connector lines are looking differently on each slides:
- Slide one: 
* The green arrow from Actor box to Altruism score box has its horizontal part vertically higher, making the vertical parts equal length instead of having the top part longer than the bottom.
* The blue arrow from Policy 3 box has two rectangle breaks instead of one.
- Slide two:
* The red arrow from Actor box to Self interest score box has two rectangle breaks instead of one.
- Slide three:
* The blue arrow from Actor box to Global Preference Weight box has equal length vertical parts instead of the top part being longer than the lower part. The horizontal part is inside the Actor box instead of below it.
* The blue arrow from Policy 3 box to Global Preference Weight box has two rectangle breaks instead of one.

Bibisected with win-7.4 to:

https://git.libreoffice.org/core/+/cbf66ec3e60d07efb7c3cceed9b4f0fb4f0510c8

author	Tibor Nagy <nagy.tibor2@nisz.hu>	Thu Mar 10 08:42:12 2022 +0100
committer	László Németh <nemeth@numbertext.org>	Tue Mar 29 16:12:45 2022 +0200

tdf#89449 PPTX import: fix line connectors

Adding CC to: Tibor Nagy

Before this these connectors were imported as rectangle shapes with colored border lines, so not the same kind of object, but they looked like in PP at least.
Comment 1 Gabor Kelemen (Collabora) 2022-06-28 10:14:00 UTC
Created attachment 180996 [details]
First slide in PP and Impress 7.4

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 3b852f274696a5e2a44bb4107c37cea9d291758e
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 2 Gabor Kelemen (Collabora) 2022-06-28 10:14:29 UTC
Created attachment 180997 [details]
Second slide in PP and Impress 7.4
Comment 3 Gabor Kelemen (Collabora) 2022-06-28 10:15:05 UTC
Created attachment 180998 [details]
Third slide in PP and Impress 7.4
Comment 4 Gabor Kelemen (Collabora) 2022-06-28 10:27:07 UTC
Created attachment 180999 [details]
Even more minimal example file
Comment 5 Gabor Kelemen (Collabora) 2022-06-28 10:28:37 UTC
Created attachment 181000 [details]
The minimal example in PP and Impress, with the two kinds of errors
Comment 6 Gerald Pfeifer 2022-08-04 23:02:54 UTC
Created attachment 181621 [details]
I believe this is another example (which I was just going to file separately)?
Comment 7 Gerald Pfeifer 2022-08-04 23:06:57 UTC
Created attachment 181622 [details]
Visual comparison for "I believe this is another example" (LO left, PP right)
Comment 8 Gerald Pfeifer 2022-10-28 07:32:39 UTC
With Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
     Build ID: 876d9d6d333cafc0649abebc757f397faf86fc4d
     CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
     Locale: en-US (en_US.UTF-8); UI: en-US
presumably the fix for bug #148926 the third test case, example from
comment #6 and comment #7 is fine again.

Slide #2 of the original case ("Minimized example file from PP 2016",
attachment #180995 [details]) is fine. Slides #1 and #3 still are not.

Also the second case ("Even more minimal example file", 
attachment #180999 [details]) is still there.
Comment 9 Commit Notification 2023-02-17 20:02:27 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a2c32afcae257e797ad69ab2346bbe3b6a2fa8ae

tdf#149756 tdf#152545 PPTX import: position of standard connector - part2

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Gerald Pfeifer 2023-02-18 22:09:57 UTC
Nice! I tested with

  Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 296c42cdb8e9dee5ac912d9777afdf3bab63efb9
  CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

and found that in addition to slide #2 of attachment #180995 [details] ("Minimized
example file from PP 2016"), which was already fine in comment #8, now
also slides #1 and #3 match how PowerPoint renders the connectors.

And similarly with attachment #180999 [details] ("Even more minimal example file").

With those two, and my example from attachment #181621 [details] which I reported
as addressed with comment #8, all issues in this report appear resolved.

Shall we close this as FIXED?
Comment 11 Commit Notification 2023-03-08 19:17:30 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/5308d68a7cc0a4b38216438150adba2ac62e2bbe

tdf#149756 tdf#152545 PPTX import: position of standard connector - part2

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 stragu 2023-06-25 22:25:25 UTC
*** Bug 154345 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2025-12-05 21:04:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/011066d92f6739bed09cee58ab1619db46bddea3

tdf#165180 tdf#149756 tdf#152545 pptx: treat all 2007 filters the same

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2025-12-05 21:05:50 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/97c067981e1a3799256f6b693fa286ea740f005c

tdf#165180 tdf#149756 tdf#152545 pptx: treat all MS PP filters the same

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-12-10 13:19:57 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c6a4aff3de0f70907fdea86369988d74ca545827

tdf#165180 tdf#149756 tdf#152545 pptx: treat all 2007 filters the same

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-12-10 13:21:12 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b67d9767755c7f16fcf7037b062287b15cd752b1

tdf#165180 tdf#149756 tdf#152545 pptx: treat all MS PP filters the same

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.