tdf#149756 tdf#152545 PPTX import: position of standard connector - part2

and add new compatibility option "ConnectorUseSnapRect".

Standard connectors (bentConnector3, bentConnector4, bentConnector5)
are improved. MSO calculates the edge track differently, so have
to add "ConnectorUseSnapRect" compatibility option:

- For PPTX file format, it is set to true and use the snap rectangle

- For ODP format, it is set to false by default and use the bounding
  rectangle.

Follow-up to commit eec48130271188cab63665acedbabf1ff5e850a2
"tdf#148926 tdf#151678 PPTX import: position of standard
connector - part1" (bentConnector2)

Change-Id: Icca84708d6e10d44ebf7262415d055ce9cfc157d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146162
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>